[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "calibrator"
version = "0.1.0"
authors = [
  { name="Joh Hyunhoo", email="jhh12345678@gmail.com" },
]
description = "A traffic network calibration and optimization tool."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas>=1.0.0",
    "numpy>=1.18.0",
    "aequilibrae>=0.9.0", # 의존성 패키지 명시
]